<resources>
    <string name="app_name">Test_aprication</string>
    <string name="see_post_button">投稿を見る</string>
    <string name="post_button">投稿する</string>
    <string name="guid_text">ここに入力してね</string>
    <string name="show_post">取得中...</string>
    <string name="happy">HAPPY</string>
    <string name="sad">SAD</string>
    <string name="fun">FUN</string>
    <string name="bad">BAD</string>
    <string name="write_post">投稿を書く</string>
    <string name="taitol_name">こそこそ</string>
    <string name="start_button">Start</string>
    <string name="net_status">接続状態: 未接続</string>
</resources>