<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity"
    android:background="@color/white">

    <View
        android:id="@+id/view_box"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_post"
        app:layout_constraintVertical_bias="0.5"/>


    <EditText
        android:id="@+id/edit_post"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:background="@color/white"
        android:hint="@string/guid_text"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/view_box"
        app:layout_constraintBottom_toBottomOf="@id/view_box"
        app:layout_constraintStart_toStartOf="@id/view_box"
        app:layout_constraintEnd_toEndOf="@id/view_box"/>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/net_status"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_button"
        android:backgroundTint="@color/button_color_selector"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_see"/>

    <Button
        android:id="@+id/button_see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_post_button"
        android:backgroundTint="@color/button_color_selector"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
